--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 </div>
 
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
-<app-orbit-list></app-orbit-list>
+<app-orbit-list [satellites]="sourceList"></app-orbit-list>
