--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -1,3 +1,4 @@
+<h3>Orbit Report</h3>
 <table>
     <tr class="header-row">
         <th (click)="sort('name')" class="sortable">Name</th>
@@ -13,6 +14,7 @@
         <td>HIGH</td>
         <td>2001-11-01</td>
     </tr>
+    
 </table>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
